--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
                 <div class="col-lg-4 col-md-6 project-item web">
                     <div class="project-card" data-aos="zoom-in">
-                        <img src="https://images.unsplash.com/photo-1557821552-17105176677c?auto=format&fit=crop&w=800"
+                        <img src="./images/main_page/web2.avif"
                             class="project-img">
                         <div class="project-overlay">
                             <span class="badge bg-primary mb-2">Web / E-Commerce
@@ -480,7 +480,7 @@
 
                 <div class="col-lg-4 col-md-6 project-item web">
                     <div class="project-card" data-aos="zoom-in" data-aos-delay="100">
-                        <img src="https://images.unsplash.com/photo-1586281380349-632531db7ed4?auto=format&fit=crop&w=800"
+                        <img src="./images/main_page/web1.avif"
                             class="project-img">
                         <div class="project-overlay">
                             <span class="badge bg-primary mb-2">Web / Job Portal</span>
@@ -494,7 +494,7 @@
 
                 <div class="col-lg-4 col-md-6 project-item web">
                     <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
-                        <img src="https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?auto=format&fit=crop&w=800"
+                        <img src="./images/main_page/hospital1.avif"
                             class="project-img">
                         <div class="project-overlay">
                             <span class="badge bg-primary mb-2">Web / Hospital</span>
@@ -508,7 +508,7 @@
 
                 <div class="col-lg-4 col-md-6 project-item web">
                     <div class="project-card" data-aos="zoom-in">
-                        <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?auto=format&fit=crop&w=800"
+                        <img src="./images/main_page/app1.avif"
                             class="project-img">
                         <div class="project-overlay">
                             <span class="badge bg-primary mb-2">App / Food</span>
@@ -522,7 +522,7 @@
 
                 <div class="col-lg-4 col-md-6 project-item web">
                     <div class="project-card" data-aos="zoom-in" data-aos-delay="100">
-                        <img src="https://images.unsplash.com/photo-1515562141207-7a88fb7ce338?auto=format&fit=crop&w=800"
+                        <img src="./images/main_page/app2.avif"
                             class="project-img">
                         <div class="project-overlay">
                             <span class="badge bg-primary mb-2">Web / Jewellery</span>
@@ -536,7 +536,7 @@
 
                 <div class="col-lg-4 col-md-6 project-item app">
                     <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
-                        <img src="https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?auto=format&fit=crop&w=800"
+                        <img src="./images/main_page/jewllery_web.avif"
                             class="project-img">
                         <div class="project-overlay">
                             <span class="badge bg-primary mb-2">Web / E-commerce </span>
