--- a/video-editing.html
+++ b/video-editing.html
@@ -190,7 +190,7 @@
                 { src: "https://inforag.com/video-portfolio/branding%20video/2nd%20final%20video.mp4", title: "Identity Design" },
                 { src: "https://inforag.com/video-portfolio/branding%20video/pixominia%20intro%20videomp4.mp4", title: "Pixominia Intro" },
                 { src: "https://inforag.com/video-portfolio/branding%20video/pixominia%20reel%202.mp4", title: "Brand Motion" },
-                { src: "https://inforag.com/video-portfolio/WhatsApp%20Video%202025-11-07%20at%2012.14.38%20PM.mp4", title: "Hotel Motion" },
+                { src: "https://inforag.com/video-portfolio/WhatsApp%20Video%202025-11-07%20at%2012.13.10%20PM.mp4", title: "Hotel Branding" },
             ],
             weeding: [
                 { src: "https://inforag.com/video-portfolio/weeding%20videos/final%20video%20wedding.mp4", title: "The Wedding Film" },
